32-bit build failures after JDK-8235765

XMLWordPrintable

    • b12

      arm32, x86_32:

      /home/buildbot/worker/build-jdkX-linux/build/src/hotspot/share/oops/klassVtable.cpp: In static member function 'static void klassItable::print_statistics()':
      /home/buildbot/worker/build-jdkX-linux/build/src/hotspot/share/oops/klassVtable.cpp:1613:118: error: format '%lu' expects argument of type 'long unsigned int', but argument 3 has type 'size_t {aka unsigned int}' [-Werror=format=]
        tty->print_cr("%6lu K uses for itables (average by class: %ld bytes)", _total_size / K, _total_size / _total_classes);
                                                                                                                            ^
      /home/buildbot/worker/build-jdkX-linux/build/src/hotspot/share/oops/klassVtable.cpp:1613:118: error: format '%ld' expects argument of type 'long int', but argument 4 has type 'size_t {aka unsigned int}' [-Werror=format=]
      At global scope:

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: