8251924: 32-bit build failures after JDK-8235765

Reviewed-by: dholmes